fix(components): solve content shifting by scroll bar

--- a/src/assets/styles/base/base.scss
+++ b/src/assets/styles/base/base.scss
@@ -13,6 +13,7 @@ body {
 // body { padding-top: $headerHeight; }
 
 :root {
+  --scrollbar-width: calc(100vw - 100%);
   font-family: 'Nunito-Sans', Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 300;
