--- a/src/components/Container/style.module.scss
+++ b/src/components/Container/style.module.scss
@@ -3,10 +3,10 @@
 .Container {
   box-sizing: content-box;
   margin-inline: auto;
-  padding-inline: 16px;
+  padding-inline: calc(16px + var(--scrollbar-width)) 16px;
   max-inline-size: 1280px;
 
   @media only screen and (min-width:768px) {
-    padding-inline: 32px;
+    padding-inline: calc(32px + var(--scrollbar-width)) 32px;
   }
 }
